# ContextAgent

./: .gitignore  .gitmodules  README.md  env.example  environment.yml  pyproject.toml  requirements.txt  setup.py
LLaMA-Factory/experiments/: cab_lora_train.sh
data/: cab_new.json
data/cab/: cab.json  cab_test.json  cab_train.json  cab_train_sft.json  cab_train_sft_wo_p.json  cab_train_sft_wo_t.json  cab_train_sft_wo_t_wo_p.json
data/cab_lite/: cab_lite.json  cab_lite_train.json  cab_lite_train_sft.json  cab_lite_train_sft_wo_p.json  cab_lite_train_sft_wo_t.json  cab_lite_train_sft_wo_t_wo_p.json
data/cab_ood/: cab_ood_test.json  cab_ood_train.json  cab_ood_train_sft.json  cab_ood_train_sft_wo_p.json  cab_ood_train_sft_wo_t.json  cab_ood_train_sft_wo_t_wo_p.json  ood_split.py  ood_split_fix.py
data/tools/: last_song.json  meetings_db.json  outbox.json  test_fitbit.csv
prompt/: README.md  prompt_summarize.txt  prompt_sys.txt  prompt_sys_wo_t.txt
prompt/baselines/: icl_fs.txt  icl_fs_wo_t.txt  icl_zs.txt
scripts/env/: export_env.example.sh
scripts/icl/: run_infer_api.sh  run_infer_local.sh
scripts/sft/: run_sft_eval_full_exp.sh  run_sft_exp.sh
src/: README.md  calculate_scores.py  config.py  functions.py  tool_registry.py  utils.py
src/cab_lite/: README.md
src/cab_ood/: README.md
src/data_process/: README.md  dataset_split.sh  sft_data_generate.py  sft_generate.sh  split_dataset.py  split_dataset_cab_lite.py
src/icl/: README.md  icl_infer.sh  icl_infer_api.sh  inference.py  inference_api.py
src/sft/: README.md  agent_server.sh  eval_sft.sh  inference.py  sft_exp.sh
src/tools/: __init__.py  add_meeting.py  add_to_agenda.py  book_uber.py  check_agenda_time_conflict.py  check_bus_schedule.py  get_city_weather.py  get_current_gps_coordinates.py  get_current_time.py  get_health_data.py  get_medical_knowledge.py  get_online_product_price.py  google_map.py  google_search.py  play_music.py  query_stock.py  search_reddit.py  search_rednote.py  send_email.py  set_timer.py  vllm.py  wikipedia_search.py
(+50 files in other folders)
